--- a/index.html
+++ b/index.html
@@ -54,6 +54,6 @@
       <div class="container"></div>
     </footer>
 
-<script src="/js/main.js"></script>
+<script src="js/main.js"></script>
   </body>
 </html>
